Fixed overflow issue added both tabs in code component (web editor /code editor)

--- a/src/app/navbar/navbar.scss
+++ b/src/app/navbar/navbar.scss
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 6px;
+  padding-left: 12px;
   font-size: 30px;
   transition: 1s;
   color: var(--logo-color);
