--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,7 +76,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   font-size: 130px;
 }
 .sidebar{
-  z-index: 0;
+   z-index: 1000!important;
   width: 80px;
   height: 100vh;
   background-color: var(--sidebar-bg);
@@ -191,3 +191,12 @@ border-radius: 15px;
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+// stying group buttons
+.dark-mode mat-button-toggle{
+  color: #ededed;
+}
+.dark-mode mat-button-toggle.mat-button-toggle-checked{
+  color: #1a1b1f;
+}
